compiler/tests/fa/errors/pure_ref_param_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع افزا(x &صحیح۳۲) صحیح۳۲:
    بازگشت x + 1
پایان

تابع اصلی:
    چاپ(1)
پایان
